--- a/src/Container/Manual/config.json
+++ b/src/Container/Manual/config.json
@@ -1,3 +1,4 @@
 {
-    "server_domain" : "http://localhost:3001/"
+    "server_domain" : "http://localhost:3001/",
+    "downloadlink" : "https://drive.google.com/drive/u/0/folders/1HxhB9_UAs4E6OA6QhpbrTV-DnGCg5Oty"
 }
